# patternize

./: .gitignore  .travis.yml  Conf.cc  Conf.hh  Directory.cc  HTMLExpander.cc  HTMLExpander.hh  IO.hh  Makefile.am  Parse.cc  Parse.hh  Pick.cc  README  README.cgi  Stream.cc  autogen.sh  cgi.cc  configure.ac  patternize.1  patternize.cc  patternize.hh  tumblr.html  tumblr.patterns
debian/: changelog  control  rules
scripts/: dist
